# wrangle_in_py

./: .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wrangle_in_py/: column_drop_threshold.py  column_standardizer.py  extracting_ymd_hms.py  remove_duplicates.py
src/wranglepy/: __init__.py  column_standardizer.py  extracting_ymd_hms.py  remove_duplicate.py
tests/: test_column_drop_threshold.py  test_column_name_standardizer.py  test_column_standardizer.py  test_extracting_hms.py  test_extracting_ymd.py  test_remove_duplicates.py  test_resulting_duplicates.py  test_string_standardizer.py  test_wrangle_in_py.py  test_wranglepy.py
