[tool.poetry]
name = "wrangle_in_py"
version = "0.1.0"
description = "A package for wrangling and tidy data in python."
authors = ["Shannon Pflueger, Stephanie Ta, Wai Ming Wong, Yixuan(Clara) Gao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
